# lforchini.com

./: .dockerignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  ci.yml  pr.yml
client/: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html
client/config/: nginx.conf
client/src/: app.rs  app.scss  lib.rs
client/src/components/: contact.css  contact.rs  contact.scss  mastodon.rs  projects.rs
client/www/: index.html  main.js
router/: Dockerfile  nginx.conf
server/: Cargo.toml  Dockerfile  README.md
server/src/: main.rs  project_routes.rs
server/src/routes/: projects.rs
shared/: Cargo.toml
shared/src/: lib.rs
static/: Dockerfile  nginx.conf
