[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.19"
shared = { path = "../shared" }
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.83"
gloo-utils = "0.1.4"
wasm-bindgen-futures = "0.4.32"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Location"
]
