[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
shared = {path = "../shared"}
serde = { version = "1.0.141", features = ["derive"] }
mongodb = "2.3.0"
axum-macros = "0.2.3"
futures-util = "0.3.21"
tower-http = { version = "0.3.4", features = ["cors"] }
