[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
axum-macros = "0.2.3"
env_logger = "0.9.1"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
